// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with an emoji-only message 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy sc-cTAITq iXWzBR"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg sc-bXdOnr jJvpUz"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hoHvKZ sc-kjOPSs iqRfaC bgbdGu"
    >
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy sc-cTAITq iXWzBR"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg sc-bXdOnr jJvpUz"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hoHvKZ sc-kjOPSs iqRfaC bgbdGu"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header whose text mentions the self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj iYJVed sc-bnOOOA bKZKFL"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-iKMXcJ jNudfI"
    >
      <div
        class="sc-jHkWmS dbMFua sc-gLDjOb kfhJHV"
      >
        <div
          class="sc-dtMhIu fZwdxn sc-bQtLLP gxAxJG"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-jnrVmt CxNTp"
        tabindex="0"
      >
        <span
          class="sc-hIaeua gfbDTX"
        >
          <i
            aria-hidden="true"
            class="sc-cQMBOM gRChQT"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-cQMBOM gRChQT"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-hoHvKZ sc-kjOPSs iqRfaC bgbdGu"
    >
      Hey
       
      <span
        class="sc-eWfYbd gsRnOH sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with a message-link chip 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy sc-bnOOOA bKZKFL"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-iKMXcJ jNudfI"
    >
      <div
        class="sc-jHkWmS dbMFua sc-gLDjOb kfhJHV"
      >
        <div
          class="sc-dtMhIu fZwdxn sc-bQtLLP gxAxJG"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-jnrVmt CxNTp"
        tabindex="0"
      >
        <span
          class="sc-hIaeua gfbDTX"
        >
          <i
            aria-hidden="true"
            class="sc-cQMBOM gRChQT"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-cQMBOM gRChQT"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-hoHvKZ sc-kjOPSs iqRfaC bgbdGu"
    >
      see this: 
      <a
        class="sc-kNzFxB ecplZR"
        href="https://shieldbattery.net/chat/1/some-channel?m=9b2e8d0e-5f3a-4a2b-8c1d-6f5e4d3c2b1a"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        <span
          aria-hidden="true"
          class="sc-hiCkpJ dnvpxc sc-hWBxdk iEIytq"
        >
          chat
        </span>
        <span
          aria-label="Channel name loading…"
          class="sc-hcuqqC ffuFPO"
        >
                     
        </span>
        <span
          class="sc-hUpmGu gbQHva"
        >
          ›
        </span>
        <span
          class="sc-fIISQZ cjAMxm"
        >
          message
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy sc-bnOOOA bKZKFL"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-iKMXcJ jNudfI"
    >
      <div
        class="sc-jHkWmS dbMFua sc-gLDjOb kfhJHV"
      >
        <div
          class="sc-dtMhIu fZwdxn sc-bQtLLP gxAxJG"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-jnrVmt CxNTp"
        tabindex="0"
      >
        <span
          class="sc-hIaeua gfbDTX"
        >
          <i
            aria-hidden="true"
            class="sc-cQMBOM gRChQT"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-cQMBOM gRChQT"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-hoHvKZ sc-kjOPSs iqRfaC bgbdGu"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gsFBvc jNSIOQ"
    >
      * 
    </span>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM sc-cAiakp REGOg guFxPG"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-hoHvKZ sc-gqtqYm iqRfaC hgSPxu"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-eWfYbd gsRnOH sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      hey
       
      <span
        class="sc-eWfYbd gsRnOH sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-eWfYbd gsRnOH sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      hey
       
      <span
        class="sc-eWfYbd gsRnOH sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <span
        class="sc-eWfYbd gsRnOH sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-eWfYbd gsRnOH sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj iYJVed"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      Hey
       
      <span
        class="sc-eWfYbd gsRnOH sc-leSMyW kVFRSl"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kTLoNQ kAFqiQ"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu cmFzFN"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-haThUj FTHVy"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-knKKcV dvglrg"
      tabindex="0"
    >
      <span
        class="sc-kTqJeW jdGXdL"
      >
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cQMBOM gRChQT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-eWfYbd gsRnOH sc-lheWVM REGOg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kTLoNQ kAFqiQ"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cQMBOM gRChQT"
    >
      : 
    </i>
    <span
      class="sc-hoHvKZ iqRfaC"
    >
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-hLVYED emRODm"
        tabindex="-1"
      >
        <span
          class="sc-oXQqu bKxeXu"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
